Add bootstrap css

--- a/app/views/products/all_products.html.erb
+++ b/app/views/products/all_products.html.erb
@@ -1,11 +1,25 @@
-<h1>All Products</h1>
+<h1><a class="btn btn-default" href="#" role="button"<h1>All Products</a></h1>
 
 <h3>Here is a listing of the products that we carry:</h3>
 
-<p><% @products.each do |product| %></p>
-<p><%= product.name %></p>
-<p><%= product.price %></p>
-<p><a href="<%= product.image %>">product image</a></p>
-<p><%= product.description %></p>
-<br>
+<table class="table table-hover" data-sort-name="name" data-sort-order="desc">
+  <thead>
+    <tr>
+      <td><data-field="name" data-sortable="true">Name</td>
+      <td><data-field="price" data-sortable="true">Price</td>
+      <td><data-field="image" data-sortable="true">Image</td>
+      <td><data-field="description" data-sortable="true">Description</td>
+    </tr>
+  </thead>
+
+<tbody>
+<tr>
+<% @products.each do |product| %>
+<td><%= product.name %></td>
+<td><%= product.price %></td>
+<td><a href="<%= product.image %>">product image</a></td>
+<td><%= product.description %></td>
+</tr>
 <% end %>
+</tbody>
+</table>
