--- a/app/views/products/all_products.html.erb
+++ b/app/views/products/all_products.html.erb
@@ -17,7 +17,7 @@
 <% @products.each do |product| %>
 <td><%= product.name %></td>
 <td>$<%= product.price %>.00</td>
-<td><a href="<%= product.image %>">product image</a></td>
+<td><img src="<%= product.image %>"></td>
 <td><%= product.description %></td>
 </tr>
 <% end %>
