--- a/app/assets/stylesheets/_external.css.scss
+++ b/app/assets/stylesheets/_external.css.scss
@@ -1,7 +1,4 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Chelsea+Market');
 
-img {
-  height: 15%;
-  
-}
