--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -4,7 +4,18 @@
   <p class="price">$<%= @product.price %></p>
   <p><img src="<%= @product.image %>"></p>
   <p><%= @product.description %></p>
-  <p><button type="button" class="btn btn-success">Add to cart</button></p>
+  <p><%= @product.in_stock? %></p>
+  <p><button type="button" class="btn btn-success">Add to cart</button></p><br>
+
+<% if @product.sale_message == "Discount Item!"%>
+  <h3><%= @product.sale_message %></h3>
+  <h3 class="price">The price is: <%= number_to_currency @product.price %></h3>
+<% else %>
+  <h3><%= @product.sale_message %></h3>
+  <h3>The price is: <%= number_to_currency @product.price %></h3>
+<% end %>
+<h3>The sales tax is: <%= number_to_currency @product.tax %></h3>
+<h3>The total is: <%= number_to_currency @product.total  %></h3><br>
 
 <%= link_to "Edit me", "/products/#{@product.id}/edit" %><br>
 
