--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+$color: red;
 
 body {
   background-image: url('wov.png');
@@ -29,5 +30,5 @@ h2 {
 }
 
 .price {
-  color: red;
+  color: $color;
 }
