--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,9 +9,10 @@
   <div class="col-md-4">
     <!-- # Link product name to individual product page -->
     <h2><a href="/products/<%= product.id %>"><%= product.name %></a></h2>
-    <p class="price">$<%= product.price %></p>
+    <p><a href="price" class="price">$<%= product.price %></a></p>
     <p><img src="<%= product.image %>"></p>
     <p><%= product.description %></p>
+    <p><%= product.in_stock? %></p>
     <p><button type="button" class="btn btn-success">Buy now!</button></p>
   </div>
   <% end %>
