--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -11,12 +11,16 @@
   <%= text_field_tag :price %>
   </div>
   <div>
-  <%= label_tag :image %>
-  <%= text_field_tag :image %>
-  </div>
-  <div>
   <%= label_tag :description %>
   <%= text_field_tag :description %>
+  </div>
+  <div>
+  <%= label_tag :supplier_id %>
+  <%= text_field_tag :supplier_id %>
+  </div>
+  <div>
+  <%= label_tag :image_url %>
+  <%= text_field_tag :image_url %>
   </div>
   <%= submit_tag 'Submit This!!' %>
 <% end %>
