--- a/app/views/products/search_result.html.erb
+++ b/app/views/products/search_result.html.erb
@@ -1,5 +1,4 @@
-<h1>Welcome to YvonneMart!</h1>
-<h2>Here is a listing of all of our products:</h2>
+<h1>Here is the result of your search:</h1>
 
 <div class="row">
 <% @products.each_with_index do |product, index| %>
