--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -19,7 +19,11 @@
 </div>
 <div>
   <%= label_tag :in_stock %>
-  <%= text_field_tag :in_stock, @product.in_stock? %>
+  <%= text_field_tag :in_stock, @product.in_stock %>
+</div>
+<div>
+  <%= label_tag :supplier_id %>
+  <%= text_field_tag :supplier_id, @product.in_stock %>
 </div>
 <%= submit_tag 'Submit This!!' %>
 <% end %>
