--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -16,11 +16,11 @@
   </div>
   <div>
   <%= label_tag :supplier_id %>
-  <%= text_field_tag :supplier_id %>
+  <!-- add dropdown form -->
+  <%= select_tag 'supplier_id', options_for_select(@suppliers.collect{ |s| [s.name, s.id] }) %>
+
   </div>
-  <div>
-  <%= label_tag :image_url %>
-  <%= text_field_tag :image_url %>
-  </div>
+
   <%= submit_tag 'Submit This!!' %>
 <% end %>
+
