--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,12 @@
   <% end %>
 
   <ul class="nav navbar-nav pull-right">
+  <li class="nav-item">
+        <a class="nav-link" href="/cartedproducts">My cart</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/orders">My orders</a>
+      </li>
     <li class="nav-item dropdown">
       <% if current_user %>
       <a class="nav-link dropdown-toggle" id="supportedContentDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
