--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
   <p><img src="<%= product.image %>"></p>
   <p><%= product.description %></p>
   <p class="in_stock"><%= product.in_stock? %></p>
-  <p><button type="button" class="btn btn-success">Buy now!</button></p>
+  <p><button type="button" class="btn btn-success"><a href="/products/<%= product.id %>">Buy now!</a></button></p>
 </div>
 <% if index % 3 == 2 %>
 </div>
