--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         <a class="nav-link" href="/products?discount_item=price">Discount Items</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/products/random_product">Random Product of the Day</a>
+        <a class="nav-link" href="/products/random_product">Random PotD</a>
       </li>
 
       <li class="nav-item dropdown">
@@ -46,10 +46,13 @@
 
   <ul class="nav navbar-nav pull-right">
   <li class="nav-item">
-        <a class="nav-link" href="/cartedproducts">My cart</a>
+        <a class="nav-link" href="/products/new">New Product</a>
+      </li>
+  <li class="nav-item">
+        <a class="nav-link" href="/cartedproducts">My Cart</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/orders">My orders</a>
+        <a class="nav-link" href="/orders">My Orders</a>
       </li>
     <li class="nav-item dropdown">
       <% if current_user %>
