--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,7 +10,12 @@
   <!-- Add a query line parameter -->
   <h2><a href="/products/<%= product.id %>"><%= product.name %></a></h2>
   <p><class="price"><%= number_to_currency product.price %></a></p>
-  <p><img src="<%= product.image %>"></p>
+  <% if product.images.first %>
+    <p><img src="<%= product.images.first.url %>"></p>
+  <% else %>
+    <p><img src="<%= product.image %>"></p>
+  <% end %>
+
   <p><%= product.description %></p>
   <p class="in_stock"><%= product.in_stock? %></p>
   <p><button type="button" class="btn btn-success"><a href="/products/<%= product.id %>">Buy now!</a></button></p>
