--- a/app/views/carted_products/index.html.erb
+++ b/app/views/carted_products/index.html.erb
@@ -5,7 +5,7 @@
   <img src="<%= item.product.image %>">
   <h2><%= item.product.name %></h2>
   <p>Carted Product Id: <%= item.id %></p>
-  <p>Quantity: <%= item.quantity %></p>
+  <p>Quantity: <%= item.carted_product_quantity %></p>
   <p>Price: <%= number_to_currency item.product.price %></p>
   <%= link_to "Delete me", "/cartedproducts/#{item.id}", :method => :delete, :confirm => "Are you sure ?"%><br>
 <% end %>
