--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -8,7 +8,7 @@
 
 <p>Categories</p>
 <% @product.categories.each do |category| %>
-<%= category.name %> 
+<%= category.name %>
 <% end %>
 
 <h2><%= @product.name %></h2>
@@ -35,7 +35,7 @@
 <% end %>
 
 <br>
-<% 
+<%
 =begin %>
 <%= form_tag '/orders/', method: :post do %>
 <%= #label_tag :quantity %>
@@ -44,7 +44,7 @@
 <%= text_field_tag :product_id, @product.id, :readonly => true %>
 <%= submit_tag 'Buy now' %>
 <% end %>
-<% 
+<%
 =end %>
 <br>
 
@@ -57,10 +57,10 @@
 
 <%= link_to "Add images", "/products/#{@product.id}/images/new" %><br>
 
-<% if current_user && current_user.admin %>
-<%= link_to "Edit me", "/products/#{@product.id}/edit" %><br>
+<% if current_user || current_user.admin %>
+  <%= link_to "Edit me", "/products/#{@product.id}/edit" %><br>
 
-<%= link_to "Delete me", "/products/#{@product.id}", :method => :delete, :confirm => "Are you sure ?"%><br>
+  <%= link_to "Delete me", "/products/#{@product.id}", :method => :delete, :confirm => "Are you sure ?"%><br>
 <% end %>
 
 <%= link_to "Back to all products", "/products/" %>
